# wf-studio

./: Cargo.toml
.github/workflows/: ci.yml
assets/: sample.wf
crates/ai/: Cargo.toml
crates/ai/src/: anthropic.rs  design_system_card.md  keystore.rs  language_card.md  lib.rs  openai.rs  prompt.rs  scripted.rs  sse.rs  stream.rs
crates/core/: Cargo.toml
crates/core/src/: artifacts.rs  diff.rs  document.rs  generate.rs  history.rs  lib.rs  project.rs  proposal.rs
crates/core/tests/: compile.rs  language_card.rs
crates/preview/: Cargo.toml
crates/preview/src/: bridge.rs  detached.rs  lib.rs  serve.rs  store.rs
crates/studio/: Cargo.toml
crates/studio/src/: app.rs  assets.rs  compile.rs  ipc.rs  main.rs  site.rs  state.rs  store.rs  theme.rs
crates/studio/src/preview/: layali.html
crates/studio/src/ui/: canvas.rs  chat.rs  ds_workspace.rs  home.rs  login.rs  mod.rs  modals.rs  onboarding.rs  overlays.rs  preview_area.rs  prompt_dock.rs  sidebar.rs  title_bar.rs  toolbar.rs  top_bar.rs  widgets.rs
docs/: .thumbnail  CafeSite.dc.html  DESIGN_SYSTEM_RESEARCH.md  IMPLEMENTATION_PLAN.md  M0_RESULTS.md  PACKAGING.md  WebFluent Studio.dc.html
docs/uploads/: WebFluent_Studio_Product_Business_Requirements (1).docx
evals/: Cargo.toml
evals/examples/: ds_live.rs
evals/src/: lib.rs  main.rs
