[workspace]
resolver = "3"
members = ["crates/core", "crates/ai", "crates/preview", "crates/studio", "evals"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
# GPL-3.0 because the app links the GPL-3.0 `webfluent` compiler (§2 licensing note).
license = "GPL-3.0-or-later"
authors = ["Monzer Omer <monzer.a.omer@gmail.com>"]
description = "WebFluent Studio — build websites by talking to an AI."

[workspace.dependencies]
wf-core = { path = "crates/core" }
wf-ai = { path = "crates/ai" }
wf-preview = { path = "crates/preview" }

# The WebFluent engine — a path dependency during development (Appendix C of
# spec/STUDIO_INTEGRATION_PLAN.md: separate repos, path-dep for now).
webfluent = { path = "/run/media/monzer-omer/the good stuff/Work/WebFluent" }
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["webview"] }
wry = { package = "lb-wry", version = "=0.53.3" }
tao = "0.35"
raw-window-handle = { version = "0.6", features = ["std"] }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-channel = "2"

# AI provider layer (BYOK). rustls avoids an OpenSSL system dependency; the
# `stream` feature gives us `bytes_stream()` for SSE. tokio is current-thread
# only — each provider call drives reqwest on its own thread (see ai::stream).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["rt", "net", "time"] }
futures-util = "0.3"

# Structured, filterable debug logging across every crate (set RUST_LOG=wf_ai=trace
# etc.; the studio installs the subscriber in main). Defaults to on so the terminal
# shows the AI/edit/preview pipeline without extra setup.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# On-disk project persistence (branded .wfp bundles in the OS data dir).
dirs = "5"
# BYO-key storage in the OS credential store. linux-keyutils is headless-safe (no
# D-Bus); a desktop build can switch to the secret-service backend for cross-reboot
# persistence — the KeyStore trait makes that a one-line swap.
keyring = { version = "3", default-features = false, features = ["linux-native", "apple-native", "windows-native"] }

# GPUI is unusably slow fully unoptimized; keep our crates fast to compile
# but optimize dependencies.
[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 0
