[package]
name = "wf-ai"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tracing.workspace = true
async-channel.workspace = true
anyhow.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
